--- a/index.html
+++ b/index.html
@@ -3,10 +3,6 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-    <meta name="keywords" content="gitalk,duoshuo,多说,评论组件,凹凸实验室,aotulabs,comment,plugin,github,issue,react,preact,component">
-    <meta name="description" content="A modern comment component based on Github Issue and Preact.凹凸实验室出品的一款基于 Github Issue 和 Preact 开发的评论插件">
     <title>Gitalk Demo | Aotu.io「凹凸实验室」</title>
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
@@ -52,7 +48,7 @@
       } else if (!~language.indexOf('zh')) {
         intro.innerText = 'A modern comment component based on Github Issue and Preact';
         beginBtn.innerText = 'GET STARTED';
-        demo.innerText = 'Demo';
+        demo.innerText = '';
       }
     </script>
     <script>
