--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         demo.innerText = '';
       }
     </script>
-    <script>
+    <!--<script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -59,6 +59,6 @@
 
       ga('create', 'UA-49304532-4', 'auto');
       ga('send', 'pageview');
-    </script>
+    </script>-->
   </body>
 </html>
