--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
       var gitalk = new Gitalk({
         clientID: '92ebe0dd8503eafaecc3',
         clientSecret: '244b7b9c27590b6f850d7f4d9d5048482b6698d1',
-        accessToken: '6a2f4d91a1f188a2089e70c2a7b63628f3e9e664',
         repo: 'gitalk',
-        owner: 'gitalk',
+        owner: 'SoftOSDev',
         admin: ['booxood', 'mamboer'],
         id: 'Demo',
         distractionFreeMode: true
