--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         repo: 'gitalk',
         owner: 'SoftOSDev',
         admin: ['booxood', 'mamboer'],
-        id: 'Demo',
+        id: location.pathname,
         distractionFreeMode: true
       });
       gitalk.render('gitalk-container');
