--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         clientSecret: '244b7b9c27590b6f850d7f4d9d5048482b6698d1',
         repo: 'gitalk',
         owner: 'SoftOSDev',
-        admin: ['booxood', 'mamboer'],
+        admin: ['SoftOSDev', 'mamboer'],
         id: location.pathname,
         distractionFreeMode: true
       });
