--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       var gitalk = new Gitalk({
         clientID: '92ebe0dd8503eafaecc3',
         clientSecret: '244b7b9c27590b6f850d7f4d9d5048482b6698d1',
-        repo: 'gitalk',
+        repo: 'gittalk',
         owner: 'SoftOSDev',
         admin: ['SoftOSDev', 'mamboer'],
         id: location.pathname,
