--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Gitalk Demo | Aotu.io「凹凸实验室」</title>
+    <title>gittalk</title>
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     
@@ -31,7 +31,7 @@
         clientSecret: '244b7b9c27590b6f850d7f4d9d5048482b6698d1',
         repo: 'gittalk',
         owner: 'SoftOSDev',
-        admin: ['SoftOSDev', 'mamboer'],
+        admin: ['SoftOSDev', 'Xihao-Hua'],
         id: location.pathname,
         distractionFreeMode: true
       });
